# tera-writer

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: 2022_top_100_wines.json  2022_top_10_wines.json  2022_top_10_wines_with_prompts.content.json  2022_top_10_wines_with_prompts.content.ko.json  2022_top_10_wines_with_prompts.json  2022_top_10_wines_with_prompts_content.ko.json  2022_top_1_wines.json  2022_top_90_wines_with_prompts.content.json  2022_top_90_wines_with_prompts.json  wine.json  wine_list.json
samples/template/: index.md
src/: main.rs  opts.rs  template.rs  wrapped_context.rs
templates/: index.ko.md  index.md  index.md.custom_function  index.md.template  index2.md.template
templates/custom_function/: index.md
