[package]
authors = ["Michael S. Huang <mhuang74@gmail.com>"]
description = "Command line ai writer using Tera templates"
edition = "2021"
license = "MIT"
name = "tera-writer"
readme = "README.md"
version = "0.1.0"

[dependencies]
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
env_logger = "0.9"
log = "0.4"
tera = "1.17"
serde = "1.0"
serde_json = { version = "1.0", optional = false }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[[bin]]
name = "teraw"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
